# VolvenceZero

./: .cursorignore  .gitattributes  .gitignore  .gitmodules  .ignore  .tmp_commit_msg.txt  README.md  SPLIT.md  _wordcount.ps1  archetecture.md  einstein.ps1  einstein.sh  install.ps1  install.sh  pyproject.toml  run_affordance_learner_probe.ps1  run_affordance_learner_probe.sh  run_companion_bench_p1.ps1  run_companion_bench_p1.sh  run_learned_active_evidence.ps1  run_learned_active_evidence.sh  run_learned_capacity_ladder.ps1  run_learned_capacity_ladder.sh  run_learned_promotion_evidence.ps1  run_learned_promotion_evidence.sh  run_learned_shadow_smoke.ps1  run_learned_shadow_smoke.sh  run_learned_shadow_soak.ps1  run_learned_shadow_soak.sh  run_longitudinal_continuity.ps1  run_longitudinal_continuity.sh  run_semantic_grounding_evidence.sh  start_browser_chat_qwen.ps1  start_browser_chat_qwen.sh  start_browser_chat_zhang_wuji.ps1  start_browser_chat_zhang_wuji.sh  stop_browser_chat_qwen.ps1  stop_browser_chat_qwen.sh  sweep_log.txt  sweep_log2.txt  (+3 more)
.cursor/plans/: clean_dlaas_deploy_e664f68e.plan.md  open-env-dialogue_a8479322.plan.md  volvencezero-12m-agi-uplift_b39ba9ed.plan.md
.cursor/rules/: cursor-convergence-workflow.mdc  first-principles-not-patches.mdc  llm-prompt-centralization.mdc  no-keyword-matching-hacks.mdc  no-swallow-errors-no-hasattr-abuse.mdc  pretrain-living-through-protocol.mdc  scenario-package-generation.mdc  ssot-module-boundaries.mdc  uploadlive-i18n.mdc
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  submission-request.yml
.github/workflows/: companion-bench-ci-smoke.yml  companion-bench-paper-suite-full.yml  companion-bench-paper-suite-small.yml  companion-bench-publish.yml  lscb-ci-smoke.yml  lscb-leaderboard-publish.yml  lscb-paper-suite-full.yml  lscb-paper-suite-small.yml  nl-essence-acceptance.yml  paper-suite-nightly.yml  paper-suite-release.yml  (+1 more)
artifacts/: dialogue-benchmark-runtime-check-20260424.json
chats/: DLAAS_README.md  Pure Einstein_.md  cursor_architecture_design_based_on_fir.md
data/: best.snap  regime-best.bs  sample-trace.ndjson  super-regime.bs  super-temporal.snap
docs/: CONTRACT_MIGRATION_LOG.md  DATA_CONTRACT.md  DEBUG_SYSTEM.md  EVALUATION_SYSTEM.md  SYSTEM_DESIGN.md  SYSTEM_GUIDE.md  application_data_contract.md  application_rollout_plan.md  application_system_design.md  closed-alpha-api-service.md  current.md  currentstatus.md  known-debts.md  next_gen_emogpt.md  package_usage.md  prd.md  relationshipdynamics.md  todo。md  volvence-thesis.md
examples/: README.md  bake_zhang_wuji_live_through.py  character_full_lifecycle_demo.py  coding_end_to_end_demo.py  companion_probe_llm_classifications.py  companion_recalibrate_with_qwen.py  companion_score_regimes_probe.py  companion_verify_llm_semantic_runtime.py  companion_verify_recalibrated_bootstraps.py  companionship_end_to_end_demo.py  companionship_real_substrate_demo.py  run_cross_session_probe_llm.py  train_zhang_wuji_template.py
research/: arxiv-survey-2026-05.md  core-author-paper-assessment-2026-05.md  deepmind-author-paper-assessment-2026-05.md  download_dm_papers.ps1  download_papers.ps1
scripts/: _summarize_atlas_titans_shadow_smoke.py  assemble_evidence_bundle_v2.py  bootstrap_bare_metal.ps1  bootstrap_bare_metal.sh  build_learned_promotion_evidence.py  build_phase2_shadow_decision_report.py  build_semantic_grounding_report.py  build_semantic_proposal_ablation_report.py  diagnose_atlas_titans_carryover_credit.py  evaluate_learned_backend_promotion.py  export_emergence_dashboard.sh  figure_bake_einstein_persona_lora.ps1  figure_bake_einstein_persona_lora.sh  figure_collect_einstein.sh  figure_cost_summary.py  figure_curate_einstein_metadata.py  figure_demo_einstein.sh  figure_grounding_eval.py  figure_refusal_eval.py  figure_verify_einstein_persona.sh  figure_voice_blind_test.py  growth_advisor_boundary_eval.py  growth_advisor_drive_ablation.py  launch_companion_ablation_p1.ps1  launch_evidence_runs_m2.sh  launch_learned_shadow_soak.ps1  probe_affordance_score_learner.py  probe_apprenticeship_active_learning.py  probe_relational_soft_verifier.py  realistic_load_companion.py  realistic_load_figure.py  realistic_load_growth_advisor.py  rollback_drill_figure.sh  rollback_drill_growth_advisor.sh  rollback_drill_substrate_upgrade.sh  run_atlas_titans_cms_shadow_smoke.py  run_capacity_ladder.py  run_dialogue_paper_suite.sh  run_eq_evidence_bundle.sh  run_eta_open_weight_paper_suite.sh  (+14 more)
site/: CNAME  README.md  about.html  compare.html  governance.html  index.html  judges.html  leaderboard.html  methodology.html  robots.txt  scenarios.html  sitemap.xml  submit.html
tests/: test_aac_lifecycle_integration.py  test_affordance_invoker.py  test_affordance_registry.py  test_affordance_renderers_and_snapshot.py  test_affordance_scorer.py  test_agent_cli.py  test_agent_session_runner.py  test_algorithm_depth.py  test_api_injection_uptake.py  test_application_storage.py  test_behavior_protocol_candidate_schema.py  test_behavior_protocol_schema.py  test_c3_gate_closure.py  test_c4_evaluation_cascade_realized.py  test_case_memory_lifecycle.py  test_closed_alpha_preflight.py  test_cms_atlas_titans_uplift.py  test_commitment_confidence_filter.py  test_core_package_boundary.py  test_credit_cocoa_lightweight.py  test_credit_gate.py  test_dialogue_benchmark.py  test_dialogue_outcome_credit.py  test_dialogue_outcome_gate_a_b.py  test_dialogue_outcome_producers.py  test_dialogue_outcome_validation.py  test_dialogue_trace.py  test_directory_scan_uptake.py  test_document_extraction.py  test_document_ingestion.py  test_domain_experience.py  test_dual_track_core.py  test_dual_track_gate_learner.py  test_dual_track_identity_seed.py  test_eta_nl_clean_action_abstraction.py  test_eta_proof_benchmark.py  test_evaluation_backbone.py  test_final_wiring.py  test_growth_advisor_fixture_uptake.py  test_hint_readout.py  (+75 more)
volvence_zero/: __init__.py  brain.py  learned_update.py
volvence_zero.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+1914 files in other folders)
