# Top-level workspace meta-package.
#
# The actual code lives in packages/vz-*/ and packages/lifeform-*/, each with
# its own pyproject.toml. This top-level project exists ONLY to:
#   1. Provide a single editable install entry that pulls in every wheel
#      (`pip install -e .` or `make install-all`).
#   2. Configure repo-wide tooling (pytest, ruff).
#
# Do not put runtime code under the repo root. New code goes into a wheel
# under packages/.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "volvence-zero-workspace"
version = "0.1.0"
description = "Volvence Zero monorepo workspace meta — installs every vz-* and lifeform-* wheel for development."
requires-python = ">=3.11"
authors = [{ name = "Volvence Zero Contributors" }]
license = { text = "Proprietary" }
dependencies = [
    "vz-contracts==0.1.*",
    "vz-substrate==0.1.*",
    "vz-memory==0.1.*",
    "vz-cognition==0.1.*",
    "vz-application==0.1.*",
    "vz-temporal==0.1.*",
    "vz-runtime==0.1.*",
    "lifeform-core==0.1.*",
    "lifeform-thinking==0.1.*",
    "lifeform-ingestion==0.1.*",
    "lifeform-affordance==0.1.*",
    "lifeform-expression==0.1.*",
    "lifeform-domain-character==0.1.*",
    "lifeform-domain-emogpt==0.1.*",
    "lifeform-domain-coding==0.1.*",
    "lifeform-service==0.1.*",
    "lifeform-evolution==0.1.*",
    "dlaas-platform-contracts==0.1.*",
    "dlaas-platform-registry==0.1.*",
    "dlaas-platform-launcher==0.1.*",
    "dlaas-platform-ops==0.1.*",
    "dlaas-platform-eval==0.1.*",
    "dlaas-platform-api==0.1.*",
]

[project.optional-dependencies]
hf = ["vz-runtime[hf]==0.1.*"]
torch = ["vz-runtime[torch]==0.1.*"]
dev = [
    "pytest",
    "ruff",
]

[tool.uv.sources]
vz-contracts        = { workspace = true }
vz-substrate        = { workspace = true }
vz-memory           = { workspace = true }
vz-cognition        = { workspace = true }
vz-application      = { workspace = true }
vz-temporal         = { workspace = true }
vz-runtime          = { workspace = true }
lifeform-core       = { workspace = true }
lifeform-thinking   = { workspace = true }
lifeform-ingestion  = { workspace = true }
lifeform-affordance = { workspace = true }
lifeform-expression = { workspace = true }
lifeform-domain-character = { workspace = true }
lifeform-domain-emogpt = { workspace = true }
lifeform-domain-coding = { workspace = true }
lifeform-service    = { workspace = true }
lifeform-evolution  = { workspace = true }
dlaas-platform-contracts = { workspace = true }
dlaas-platform-registry = { workspace = true }
dlaas-platform-launcher = { workspace = true }
dlaas-platform-ops  = { workspace = true }
dlaas-platform-eval = { workspace = true }
dlaas-platform-api  = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.setuptools]
# This top-level package contains no source — it's a meta-installer.
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "hf: tests that require optional Hugging Face / torch substrate dependencies",
]
# pytest-asyncio in auto mode lets ``async def test_...`` functions and
# ``async`` fixtures (e.g. lifeform-service's aiohttp test client) work
# without per-test ``@pytest.mark.asyncio`` boilerplate.
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["**/__pycache__", "**/.pytest_cache", "build", "dist"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "B",
    "S110",  # blind try/except: pass
    "S112",  # blind try/except: continue
    "E722",  # bare except
]
